--- a/404.md
+++ b/404.md
@@ -8,4 +8,4 @@ permalink: /404.html
 
 Что то определенно пошло не так...
 
-<a href="/">Вернемся?</a>
+<a class="btn btn-default" href="/">Вернемся?</a>
